tests/baselines/reference/alwaysStrictModule2.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.
b.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    namespace M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }
    
==== b.ts (1 errors) ====
    namespace M {
        export function f2() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }